# front/dto/RoomDto.go
@@ -1,1 +1,9 @@
 package dto
+
+import "Cgo/front/models"
+
+type RoomDto struct {
+	models.RoomApply
+	//是否同意
+	IsArgument bool
+}
